--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,21 @@
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
 }
+.container,
+.container-fluid {
+  --bs-gutter-x: 0;
+  --bs-gutter-y: 0;
+}
+.row {
+  margin-top: 0;
+  margin-right: 0;
+  margin-left: 0;
+}
+.row > * {
+  padding-right: 0;
+  padding-left: 0;
+  margin-top: 0;
+}
 .slider {
   height: 100vh;
   width: 100%;
@@ -314,6 +329,7 @@ textarea {
   background-color: #c32865;
 }
 /* -------------- media Query ------------------- */
+
 @media screen and (max-width: 767px) {
   .navbarTop {
     height: 10vh;
@@ -344,9 +360,16 @@ textarea {
     width: 40%;
   }
   .ourWork .brands img {
-    width: 90%;
-    height: 40px;
-    margin: 10px;
+    width: 100%;
+    height: 50px;
+
+    margin-right: 20px;
+  }
+}
+@media screen and (max-width: 1030px) {
+  .ourWork button {
+    padding: 5px;
+    margin: 5px;
   }
 }
 
